# pyfefi2

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
include/: numpy_util.hpp  py_utils.hpp  rk.hpp  simd.hpp  trace_grid.hpp  trace_line.hpp
include/compress/: array.hpp  compress.hpp  compress_ext.hpp  compress_impl.hpp  compressed_file.hpp
include/coords/: coords.hpp  coords_ext.hpp
include/interp/: bspline_interp.hpp  bspline_weights.hpp  interp.hpp  interp_ext.hpp  rational.hpp
pyfefi2/: __init__.py  client_auth.py  compress_file.py  config.py  coords.py  data.py  data_server.py  datafolder.py  dataset.py  fn_norms.py  fn_pressure.py  interp.py  slices.py  units.py
pyfefi2/fns/: __init__.py  norm.py  pressure.py  register.py
src/: module.cpp  py_utils.cpp  trace_line.cpp
src/compress/: array.cpp  compress_impl_double.cpp  compress_impl_float.cpp  compress_impl_int16_t.cpp  compress_impl_int32_t.cpp  compress_impl_int64_t.cpp  compress_impl_int8_t.cpp  compress_impl_uint16_t.cpp  compress_impl_uint32_t.cpp  compress_impl_uint64_t.cpp  compress_impl_uint8_t.cpp  compressed_file.cpp  pymodule.cpp
src/coords/: cartesian_mod.cpp  sphere_mod.cpp
src/interp/: interp_1order.cpp  interp_2order.cpp  interp_3order.cpp  interp_4order.cpp
